<resources>
    <string name="app_name">Lecture</string>
    <string name="item1">Add Lecture</string>
    <string name="item2">Add Lecturer</string>
    <string name="title_activity_main2">Lectures</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nikolay Kuzichev</string>
    <string name="nav_header_subtitle">nikolaykuzichev99@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="content">Content</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="student_lecturer_number">Student/Lecturer number</string>
    <string name="iss_lecturer">Iss Lecturer</string>
    <string name="enter_your_student_lecturer_number">Enter your student/lecturer number</string>
    <string name="sign_in">Sign in</string>
    <string name="student_number">Student number</string>
    <string name="is_lecturer">Is Lecturer?</string>
    <string name="registration">Registration</string>
    <string name="add_lecturer">add_lecturer</string>

</resources>
